TEST_PROGRAMS/VALID/09/exp_statements.go
package exp_statement

func main() {
    f();
    a := b
}
