TEST_PROGRAMS/INVALID/04/98.go
package main

func main() {
    switch { //Invalid case (semi inserted)
      case a
             :
    }


}
